<resources>
    <string name="app_name">MovieAppEx</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forgot_password">Forgot password</string>
    <string name="action_filter">Filter</string>
    <string name="loading_movies">Loading Movies</string>
    <string name="sort_by">Sort By</string>
    <string name="movie_guide">MovieGuide</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="summary">Summary</string>
    <string name="release_date">Release Date: %s</string>
    <string name="rating">%s/10</string>
    <string name="favorites">Favorites</string>
    <string name="newest">Newest</string>
    <string name="highest_rated">Highest Rated</string>
    <string name="most_popular">Most Popular</string>
    <string name="action_search">Search</string>
    <string name="guest_login">Guest</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"


    </string>
    <string name="action_settings">Settings</string>
    <string name="login_type_spinner">Login type</string>
    <string name="add">Add</string>
    <string name="reset">Reset</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="search">Search</string>
    <string name="movie_details">Movie Details</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_pop">Popular</string>
    <string name="menu_top">Top rated</string>
    <string name="menu_up">Upcoming</string>
    <string name="menu_info">Info</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_sav">Save</string>
    <string name="menu_check">Check</string>
    <string name="menu_go">Go</string>
    <string name="storage_type">Storage type</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="preference_file_key">com.polinc.movieappex</string>
    <string name="channel_name">Storage info</string>
    <string name="channel_description">Information for storage</string>



</resources>